# mtg

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  AUTHORS.txt  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  README.back.txt  README.md  README.rst  appveyor.yml  dvlpt_requirements.txt  pyproject.toml  setup.cfg  setup.py  travis.yml
.github/workflows/: conda-package-build.yml
.pkglts/: pkg_cfg.json  pkg_hash.json
conda/: environment.yml  meta.yaml
debian/: control
doc/: conf.py  contents.rst  environment.yml  index.rst  readme.rst
doc/_dvlpt/: modules..rst  mtg_wralea..rst  openalea..rst  openalea.mtg..rst  openalea.mtg.gui..rst  openalea.mtg.interface..rst  openalea.mtg.plantframe..rst
doc/user/: agraf.drf  agraf.mtg  algorithm.rst  api_algo.rst  api_aml.rst  api_io.rst  api_mtg.rst  api_plantframe.rst  api_traversal.rst  api_util.rst  biblio.rst  code_file2.mtg  code_file3.mtg  create_mtg.py  data_structure.rst  example.lpy  illustration.rst  index.rst  intro.rst  mtg_fig32.mtg  quick_start.rst  syntax.rst  tutorial.rst  tutorial_mtg_aml.rst  tutorial_plantframe.rst  visualea.rst
example/: MTGLsystem.ipynb  rewriting_example.py
newmtg/: AUTHORS.txt  NEWS.txt  TODO.txt  metainfo.ini  setup.cfg  setup.py
newmtg/debian/: changelog  control  copyright  python-openalea.mtg.preinst  rules
newmtg/doc/: Makefile  conf.py  contents.rst  mtg.txt  sphinx.ini
newmtg/doc/newmtg/: index.rst
newmtg/doc/user/: api_algo.rst  api_aml.rst  api_io.rst  api_mtg.rst  api_plantframe.rst  api_traversal.rst  autosum.rst  code_file.mtg  create_mtg.py  data_structure.rst  illustration.rst  index.rst  intro.rst  lpy2mtg.rst  overview.txt  quick_start.rst  syntax.rst  tutorial.rst  tutorial_mtg_aml.rst  tutorial_plantframe.rst
newmtg/example/: rewriting_example.py
newmtg/src/mtg/: __init__.py  algo.py  aml.py  color.py  dataframe.py  dresser.py  frame.py  io.py  layout.py  matrix.py  mtg.py  plantframe.py  rewriting.py  stat.py  traversal.py  tree.py  treestats.py  turtle.py  util.py
newmtg/src/mtg/gui/: mtg_editor.py
newmtg/src/mtg/interface/: mtg.py
newmtg/src/mtg/plantframe/: color.py  display.py  frame.py  plantframe.py  turtle.py
newmtg/src/mtg_wralea/: __wralea__.py  py_mtg.py
newmtg/test/: eurograph.py  random_mtg.py  simple.lpy  test_aml.py  test_dresser.py  test_edition.py  test_lsystem.py  test_mtg.py  test_operation.py  test_parsing.py  test_parsing_axialtree.py  test_parsing_mtg.py  test_plantframe1.py  test_proxynode.py  test_stat.py  test_traversal.py  test_tree.py  test_tulip.py  test_turtle.py  test_turtle_mtg.py  test_writing_mtg.py  visu3d.py
newmtg/test/data/: agraf.drf  mtg1.mtg  mtg2.mtg  mtg3.mtg  mtg4.mtg  mtg5.mtg  noyer.drf  test10_agraf.mtg  test11_wij10.mtg  test12_wij10.mtg  test6_apricot2.mtg  test7.mtg  test8_boutdenoylum2.mtg  test9_noylum2.mtg  walnut.drf
share/data/: agraf.mtg  mtg3.mtg
share/notebook/: MTG PlantFrame.ipynb  MTG pandas.ipynb
src/mtg/: __init__.py  draw.py  io.py  layout.py  rewriting.py  turtle.py  util.py
src/mtg/plantframe/: dresser.py  turtle.py
src/openalea/mtg/: __init__.py  algo.py  aml.py  color.py  draw.py  io.py  iox.py  layout.py  matrix.py  mtg.py  rewriting.py  stat.py  traversal.py  tree.py  treestats.py  util.py  version.py
src/openalea/mtg/data/: MTG_test.txt  __init__.py  apricot.mtg  boutdenoylum2.mtg  leaf_axis.drf  monopodial_plant.mtg  mtg2.mtg  mtg4.mtg  mtg51.mtg  noyer.drf  oaktree.drf  origin.drf  reconstructed_appletree.mtg  wij10.drf
src/openalea/mtg/gui/: __init__.py  mtg_editor.py
src/openalea/mtg/interface/: mtg.py
src/openalea/mtg/plantframe/: color.py  display.py  dresser.py  frame.py  plantframe.py  plot_statistic.py  turtle.py
src/openalea/mtg_wralea/: gui.py  py_mtg.py
test/: debug.py  eurograph.py  random_mtg.py  test_aml.py  test_dresser.py  test_edition.py  test_lsystem.py  test_mtg.py  test_parsing.py  test_parsing_axialtree.py  test_parsing_mtg.py  test_plantframe1.py  test_proxynode.py  test_rewriting.py  test_stat.py  test_traversal.py  test_tree.py  test_tulip.py  test_turtle.py  test_writing_mtg.py  test_writing_mtg2.py  toto.xls  visu3d.py
test/data/: agraf.drf  mtg_dynamic.mtg  origin.drf  test11_wij10.mtg  test6_apricot2.mtg  test7.mtg  test_data_dir.py  walnut.drf  wij10.drf
tests/: eurograph.py  random_mtg.py  simple.lpy  test_aml.py  test_parsing.py  test_traversal.py  test_tree.py  test_turtle.py  visu3d.py
tests/data/: leaf_axis.drf  noyer.drf  oaktree.drf  reconstructed_appletree.mtg  test12_wij10.mtg
