[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools_scm",
  ]
build-backend = "setuptools.build_meta"

# enable dynamic versioning based on git tags
[tool.setuptools_scm]
# Format version to ease alignment with conda/meta.yaml tag-based versioning
fallback_version = "2.2.0.dev0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project]
name = "openalea.mtg"
dynamic = ["version"]
description = "Multiscale Tree Graph datastructure and interfaces"
readme = "README.rst"
authors = [
    { name = "Christophe Pradal", email = "christophe.pradal@cirad.fr" }
]
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
keywords = ["OpenAlea", "MTG", "Plant Architecture", "Tree Graph"]

dependencies = [
    "pandas"
]

[project.urls]
Homepage = "http://github.com/openalea/mtg"

[project.entry-points."wralea"]
mtg = "openalea.mtg_wralea"




[project.optional-dependencies]
test = [
    "pytest",
    "path",
]
doc = [
  "sphinx-favicon",
  "sphinx-rtd-theme",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "nbsphinx",
]

# section specific to conda-only distributed package (not used by pip yet)
# based on astk, used in hydroroot with a meta.yaml that only use metadata from
# pyproject => only pyproject.toml must be modified
[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
    "openalea.plantgl",
    "openalea.lpy",
    "matplotlib-base",
]


[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.mtg", "*.drf", "*.txt"]
